--- a/index-b4 move aside to within div that contains section also.html
+++ b/index-b4 move aside to within div that contains section also.html
@@ -72,10 +72,27 @@ Don't forget to look into the concepts of: float, padding, margin, display, over
 			aside
 		</aside>
 
-		<footer id="footer1">
-			footer
+		<section id="middle"> 
+			&lt;section&gt; #888
+		</section>
+
+		<section id="right">
+			&lt;section&gt; #666
+		</section>
+
+		<section id="full">
+			<aside>
+				&lt;aside&gt; #fff
+			</aside>
+			&lt;section&gt; #eee
+			<div id="division">
+				&lt;div&gt; #6ea3da
+			</div>
+		</section>
+
+		<footer>
+			&lt;footer&gt; #ccc
 		</footer>
-		
 		
 	</body>
 </html>
